	- New function mglFont::Copy() for copying font data from other instance.
	- New function mgl_set_font().
	- Bug with ctt is corrected.
	- Improve Window() functions (for FLTK and GLUT) so that argc, argv can be NULL now.
	- Improve color Ids so that user may change it (for example, add new color).
	- Add "smoothing" for edges of cutted surfaces.
	- Improve TeX symbol parsing.

	- Improve log-axis ticks.
	- Add 'marksize' option in MGL scripts for changing MarkSize for single plot only.
	- Add 'legend' option in MGL scripts for adding plot annotation.
	- Improve text in Legend().
	- Extend plot Bars() for drawing bars side-by-side or one-above-one.
	- New plot TextMark() is added for drawing textual (includeing LaTeX) symbols at point position.
	- New MGL command 'textmark' is added.
	
	- Support of named columns
		* Column names recognition in mglData::Read(). The string with ## supposed to contain the column name (id) -- character from 'a' to 'z'.
		* New functions mglData::Column(), mglData::SetColumnId() for named columns handling.
		* Column function (like "plot a('t') a('p*b')") in MGL scripts.
		* New functions mgl_data_column(), mgl_data_set_id().
	

1.6 Released 13 March 2008
	- The font parsing and printing codes are completely rewritten
		* Unicode supprot is added for all functions which print/draw the text.
		* The class mglFont is completely rewritten for handling new format of solid/wire fonts with UTF glyphs.
		* The set of recognized TeX symbols and commands is extended.
		* It is possible now to use different font typefaces in MathGL.
		* Tools for making solid/wire font files from *.otf, *.ttf and so on files are added.
		* Function mglFont::Load always sets locale LC_NUMERIC to "C".
		* Internal font has limited set of characters and no italic/bold symbols. This font is used as default under MS Windows.
	- The structure of library is reorganized
		* Header files now are placed in mgl/ subdirectory.