@@ -100,13 +100,15 @@ void mgl_set_scheme_(long *gr, char *sch, int l)
 	_GR_->SetScheme(s);		delete []s;
 }
 /// Set font facename
-void mgl_set_font(long *gr, char *name, char *path, int l,int n)
+void mgl_set_font_(long *gr, char *name, char *path, int l,int n)
 {
 	char *s=new char[l+1];		memcpy(s,name,l);	s[l]=0;
 	char *d=new char[n+1];		memcpy(d,path,n);	d[n]=0;
 	_GR_->GetFont()->Load(s,d);	delete []s;		delete []d;
 }
-
+/// Copy font data from another HMGL object
+void mgl_copy_font_(long *gr, long *gr_from)
+{	_GR_->GetFont()->Copy(((mglGraph *)(*gr_from))->GetFont());	}
 //-----------------------------------------------------------------------------
 //		Export to file
 //-----------------------------------------------------------------------------
